# easy-wrk

./: .gitignore  check.sh  pyproject.toml
easywrk/: __init__.py  cli.py  commands.py  common.py  validates.py  wrk.py
example/get/: easywrk.toml
example/jinja2/: .env  easywrk.toml  get.toml  post.toml
example/json/: easywrk.toml
example/post/: easywrk.toml
example/raw-body/: easywrk.toml
example/raw-body/files/: test.txt
example/upload-files/: .env  easywrk.toml
